--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -83,8 +83,8 @@
         <script type="text/javascript" src="resources/js/notify.js"/>
 
         <!-- ==== Scroll an anchor into view if we have one ==== -->
-        <script type="text/javascript">
-            $('a').not('.note-teaser')
+        <!--<script type="text/javascript">
+            $('a').not('.note-teaser' || '.title-teaser')
                 .filter(function() {
 //                    console.log("Click on a@href=" + $(this).attr('href') + '... (window.location.href being ' + window.location.href + '.)');
 //                    console.log((window.location.origin + window.location.pathname + window.location.search
@@ -122,13 +122,13 @@
                   window.scroll(0, scrolledY - $(".navbar-fixed-top").outerHeight(true) - 50);
                 };
                 if($(targetId).nodeName == "A") {
-                    $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
-                    $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
-                    $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
+                    $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 1000 );
+                    //$(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
+                    //$(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
                 } else {
-                    $(targetId).effect( "highlight", {color:'LightSkyBlue'}, 700 );
-                    $(targetId).effect( "highlight", {color:'LightSkyBlue'}, 700 );
-                    $(targetId).effect( "highlight", {color:'LightSkyBlue'}, 700 );
+                    $(targetId).effect( "highlight", {color:'LightSkyBlue'}, 1000 );
+                    //$(targetId).effect( "highlight", {color:'LightSkyBlue'}, 700 );
+                    //$(targetId).effect( "highlight", {color:'LightSkyBlue'}, 700 );
                 }
 //                var $offset = $(targetId).offset().top;
 //                console.log("$('" + targetId + "').offset().top = " + $offset + ".")
@@ -140,7 +140,7 @@
 //                                $(targetId).parent().effect( "highlight", {color:'LightSkyBlue'}, 700 );
 //                            });
             }
-        </script>
+        </script>-->
 
         <!-- ==== Toggle diplomatic/constituated textmode ==== -->
         <script type="text/javascript" src="resources/js/sal-common.js"/>
@@ -250,25 +250,6 @@
                 });
             });
         </script>
-        
-        <!-- ==== Global citation reference ==== -->
-        <script type="text/javascript">
-            var modal = document.getElementById('citRef');
-            var btn = document.getElementById("citRefBtn");
-            var span = document.getElementsByClassName("closeCitRef")[0];
-            btn.onclick = function() {
-              modal.style.display = "block";
-            }
-            span.onclick = function() {
-              modal.style.display = "none";
-            }
-            window.onclick = function(event) {
-              if (event.target == modal) {
-                modal.style.display = "none";
-              }
-            } 
-        </script>
-        
 
         <!-- ==== Load Paginator content when clicking on dropdown-menu ==== -->
         <script type="text/javascript">
@@ -403,11 +384,11 @@
                 var v2 = getI18nAccessString();
                 var v3;
                 if (target.getElementsByClassName('cite-rec-trail')[0]) {
-                    v3 = target.getElementsByClassName('cite-rec-trail')[0].textContent;
+                    v3 = ', ' + target.getElementsByClassName('cite-rec-trail')[0].textContent;
                 } else {
                     v3 = '';
                 }
-                input.textContent = v1 + ' ' + v2 + ', ' + v3;
+                input.textContent = v1 + ' ' + v2 + v3;
                 document.body.appendChild(input);
                 input.select();
                 document.execCommand('copy');
