Reorganize navigation menus

--- a/templates/template_work.html
+++ b/templates/template_work.html
@@ -143,11 +143,11 @@
 
         <!-- ==== Toggle diplomatic/constituated textmode ==== -->
         <script type="text/javascript" src="resources/js/sal-common.js"/>
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
 //            $(document).ready(function() {
 //                if (window.location.search.match(/mode=((orig)|(edit))/i)) { applyMode(); }
 //            });
-        </script>
+        </script>-->
 
         <!-- ==== Show GUI-Nav when scolling to top ==== -->
         <script type="text/javascript">
