--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -707,7 +707,7 @@ a .edited, a .expan, a .reg, a .corr{
 }
 span.copy-alert {
     position:absolute; 
-    right:-17rem; 
+    display:inline-block;
     background-color: #404040;
     color: #fff;
     text-align: center;
@@ -1299,3 +1299,45 @@ CSS-Solution from http://stackoverflow.com/questions/18192082/bootstrap-3-navbar
     background-color: #ccc;
 }
 
+/* Dropdown submenu */
+.dropdown-submenu {
+    position: relative;
+}
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+.dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+.dropdown-submenu.pull-left {
+    float: none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
