--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -442,9 +442,12 @@ li.cardoStyleLi {
 .sal-toolbox-body {
     display:none;
 }
+.sal-toolbox-body .popover-content { /* overwriting Bootstrap settings here */
+    padding: 3px
+}
 
 div.sal-tb-btn {
-    font-size:17px !important;
+    font-size:16px !important;
     display:block;
 }
 
