Suppress line breaks in copy alerts

--- a/resources/css/style_work.css
+++ b/resources/css/style_work.css
@@ -713,6 +713,7 @@ a .edited, a .expan, a .reg, a .corr{
 }
 span.copy-alert {
     position:absolute; 
+    white-space: nowrap;
     display:inline-block;
     background-color: #404040;
     color: #fff;
